<resources>
    <!-- Splash -->
    <string name="app_name">Take The Throw</string>
    <string name="SplashText">Take The Throw</string>

    <!-- Login -->
    <string name="Login">Inicio de Sesion</string>
    <string name="user_help_til">Usuario</string>
    <string name="password_help_til">Contraseña</string>
    <string name="bt_registro">Registrarme</string>
    <string name="cboxRecordar">Recuerdame</string>
    <string name="pregunta_registro">¿Aun no estas registrado?</string>
    <string name="bt_login">Entrar</string>

    <!-- Registro -->
    <string name="Registro">Registro</string>
    <string name="email_help_til">Email</string>
    <string name="ConfPass_help_til">Confirmar Contraseña</string>



    <!-- Fragments y Menu -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_menu">MainActivity</string>
    <string name="title_spinner">Spinner</string>
    <string name="title_about">Acerca De</string>
    <string name="hint_nomTorneo">Nombre del torneo</string>
    <string name="hint_organizadorTorneo">Nombre del organizador</string>
    <string name="bt_mostrar">Mostrar torneo</string>
    <string name="txt_nomTorneo">"Nombre del torneo: "</string>
    <string name="txt_orgTorneo">"Organizador: "</string>

    <string name="color_red">Rojo</string>
    <string name="color_blue">Azul</string>
    <string name="color_green">Verde</string>
    <string name="selectedRed">Has seleccionado el color Rojo</string>
    <string name="selectedBlue">Has seleccionado el color Azul</string>
    <string name="selectedGreen">Has seleccionado el color Verde</string>
    <string name="txt_about">Acerca De</string>
    <string name="text_About">  ·Take The Throw es una app la cual se enfoca en la recopilacion de torneos para dar visibilidad a los organizadores y permitir al usuario saber que torneos hay disponibles</string>
    <string name="text_About_2">En la primera pestaña dispondremos de una opcion para poner el nombre y organizador del torneo el cual se mostrara por pantalla, si nos movemos a la segunda pesataña dispondremos de un spinner el cual nos permitira cambiar el color del fondo</string>
</resources>