<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.alvaro_gordillo_alumno_tarea6.Fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_spinner"
        android:name="com.example.alvaro_gordillo_alumno_tarea6.Fragments.SpinnerFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_spinner" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.example.alvaro_gordillo_alumno_tarea6.Fragments.AboutFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_about" />
</navigation>